Closed
Bug 404495
Opened 18 years ago
Closed 18 years ago
Native GTK style for menu checkboxes
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9beta2
People
(Reporter: micmon, Assigned: ventnor.bugzilla)
Details
Attachments
(2 files)
|
25.77 KB,
image/png
|
Details | |
|
1.39 KB,
patch
|
roc
:
review+
roc
:
superreview+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.8) Gecko/20071022 Ubuntu/7.10 (gutsy) Firefox/2.0.0.8
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9b2pre) Gecko/2007111904 Minefield/3.0b2pre
The checkboxes in dialog windows (preferences etc) have a nice GTK look now, even checkboxes in webpages look GTK-native in FF3. The only place were the checkboxes look different is the menu. Would be nice if FF3 would pick up the native look here, too.
Reproducible: Always
| Reporter | ||
Comment 1•18 years ago
|
||
| Reporter | ||
Comment 2•18 years ago
|
||
Btw, FF3 is already using GTK native radio buttons in menus.
Updated•18 years ago
|
Component: OS Integration → Widget: Gtk
Product: Firefox → Core
QA Contact: os.integration → gtk
Version: unspecified → Trunk
| Assignee | ||
Comment 3•18 years ago
|
||
This seems to do it for me by removing an evil assumption. I'm not sure how this would look under GNOME 2.20 as this computer uses Ubuntu Feisty instead of Gutsy. Any plans to upgrade this thing, Roc?
Assignee: nobody → ventnor.bugzilla
Status: NEW → ASSIGNED
Attachment #290156 -
Flags: superreview?(roc)
Attachment #290156 -
Flags: review?(roc)
Comment on attachment 290156 [details] [diff] [review]
Patch
Just verify that that style was available in old versions of GTK.
Attachment #290156 -
Flags: superreview?(roc)
Attachment #290156 -
Flags: superreview+
Attachment #290156 -
Flags: review?(roc)
Attachment #290156 -
Flags: review+
| Assignee | ||
Comment 5•18 years ago
|
||
Comment on attachment 290156 [details] [diff] [review]
Patch
Its been there since 2.8, the oldest documentation I could find. So I think we're safe.
Attachment #290156 -
Flags: approval1.9?
| Reporter | ||
Comment 6•18 years ago
|
||
I remember someone saying on our little IRC meeting that the lower dependency for GTK was upped to 2.10 for FF3.
Comment 7•18 years ago
|
||
(In reply to comment #6)
> I remember someone saying on our little IRC meeting that the lower dependency
> for GTK was upped to 2.10 for FF3.
See http://wiki.mozilla.org/Linux/Runtime_Requirements for the complete list.
Comment 8•18 years ago
|
||
Comment on attachment 290156 [details] [diff] [review]
Patch
a=beltzner for drivers
Attachment #290156 -
Flags: approval1.9? → approval1.9+
Updated•18 years ago
|
Keywords: checkin-needed
Comment 9•18 years ago
|
||
Checking in widget/src/gtk2/gtk2drawing.c;
/cvsroot/mozilla/widget/src/gtk2/gtk2drawing.c,v <-- gtk2drawing.c
new revision: 1.43; previous revision: 1.42
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M10
You need to log in
before you can comment on or make changes to this bug.
Description
•