Bug 404495 - "Native GTK style for menu checkboxes" [p=ventnor.bugzilla@yahoo.com.au (Michael Ventnor) r+sr=roc a1.9=beltzner]